feat: adição de ContentNegotiation e HATEOAS